:bug: fix: horizontal align of candidate filters header

--- a/src/components/CandidateStatus/CandidateStatus.module.scss
+++ b/src/components/CandidateStatus/CandidateStatus.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0 auto;
   gap: 10px;
 
   &__item {
