--- a/src/components/Table/Filters/CandidateDateFilter/CandidateDateFilterButton.module.scss
+++ b/src/components/Table/Filters/CandidateDateFilter/CandidateDateFilterButton.module.scss
@@ -1,5 +1,6 @@
 .container {
-  width: 100%;
+  width: 160px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
